--- a/balrog/config/config.yaml
+++ b/balrog/config/config.yaml
@@ -1,18 +1,22 @@
 agent: 
-  type: naive            # Type of agent to use (e.g., 'naive', 'cot', etc.)
+  type: cot            # Type of agent to use (e.g., 'naive', 'cot', etc.)
   remember_cot: True     # Whether the agent should remember its reasoning across turns
   max_history: 16        # Maximum number of previous turns to keep in the dialogue history
   max_image_history: 0   # Maximum number of images to keep in the history
   max_cot_history: 1     # Maximum number of chain-of-thought steps to keep in history (if using 'cot' type of agent)
   max_icl_history: 1000   # Maximum number of ICL steps to keep in history (if using 'few_shot' type of agent)
   cache_icl: False
+  embedding_model: "all-MiniLM-L6-v2" # Model to embed RAG query
+  nethack_wiki_index: "faiss.index" # Path to the faiss index for RAG
+  nethack_wiki_store: "processed_wiki_self.json" # Path to the faiss store for RAG
+  top_k: 3
 
 eval:
   output_dir: "results"  # Directory where evaluation results will be saved
   resume_from: null      # Path to to the incomplete results file to resume an incomplete run
   num_workers: 16        # Number of parallel workers. Increase for faster evaluation if you have enough resources
   num_episodes:          # Minimum number of episodes to run for each environment. You can optionally increase this to get more reliable results
-    nle: 5               # Number of episodes for the 'nle' environment
+    nle: 5            # Number of episodes for the 'nle' environment
     minihack: 5          # Number of episodes for each 'minihack' task
     babyai: 10           # Number of episodes for each 'babyai' task
     crafter: 10          # Number of episodes for the 'crafter' environment
@@ -26,8 +30,9 @@ eval:
   feedback_on_invalid_action : True       # Whether to provide feedback on invalid actions
 
 client:
-  client_name: openai           # LLM client to use (e.g., 'openai', 'gemini', 'claude')
-  model_id: gpt-4o              # Model identifier (e.g., 'gpt-4', 'gpt-3.5-turbo')
+  client_name: gemini           # LLM client to use (e.g., 'openai', 'gemini', 'claude')
+  # model_id: gemini-2.0-pro-exp-02-05
+  model_id: gemini-2.0-flash     # Model identifier (e.g., 'gpt-4', 'gpt-3.5-turbo')
   base_url: http://localhost:8080/v1   # Base URL for the API (if using a local server)
   generate_kwargs:
     temperature: 0.0            # Sampling temperature; 0.0 makes the output deterministic
@@ -38,7 +43,7 @@ client:
   alternate_roles: False        # Whether the client requires alternating between the agent and the environment
 
 envs:
-  names: babyai-babaisai-textworld-crafter-nle-minihack   # Environments to evaluate, separated by hyphens
+  names: nle   # Environments to evaluate, separated by hyphens
   env_kwargs:
     seed: null                # Random seed; null means a random seed is used
   nle_kwargs:
@@ -84,14 +89,14 @@ tasks:
     - NetHackChallenge-v0       # Tasks for the NLE environment
 
   minihack_tasks:
-    - "MiniHack-Boxoban-Hard-v0"
-    - "MiniHack-Boxoban-Medium-v0"
-    - "MiniHack-MazeWalk-9x9-v0"
-    - "MiniHack-MazeWalk-15x15-v0"
-    - "MiniHack-Corridor-R3-v0"
-    - "MiniHack-CorridorBattle-Dark-v0"
+    # - "MiniHack-Boxoban-Hard-v0"
+    # - "MiniHack-Boxoban-Medium-v0"
+    # - "MiniHack-MazeWalk-9x9-v0"
+    # - "MiniHack-MazeWalk-15x15-v0"
+    # - "MiniHack-Corridor-R3-v0"
+    # - "MiniHack-CorridorBattle-Dark-v0"
     - "MiniHack-Quest-Easy-v0"
-    - "MiniHack-Quest-Medium-v0"
+    # - "MiniHack-Quest-Medium-v0"
 
   crafter_tasks:
     - "default"                 # Tasks for Crafter
