--- a/balrog/config/config.yaml
+++ b/balrog/config/config.yaml
@@ -1,5 +1,5 @@
 agent: 
-  type: cot_rag           # Type of agent to use (e.g., 'naive', 'cot', etc.)
+  type: robust_cot_improved          # Type of agent to use (e.g., 'naive', 'cot', etc.)
   remember_cot: True     # Whether the agent should remember its reasoning across turns
   max_history: 16        # Maximum number of previous turns to keep in the dialogue history
   max_image_history: 0   # Maximum number of images to keep in the history
@@ -45,8 +45,8 @@ client:
 envs:
   names: nle   # Environments to evaluate, separated by hyphens
   env_kwargs:
-    # seed: 73
-    seed: null                # Random seed; null means a random seed is used
+    seed: 73
+    # seed: null                # Random seed; null means a random seed is used
   nle_kwargs:
     character: "@"            # Character representing the agent in NLE
     max_episode_steps: 100_000  # Max steps per episode in NLE
